# ArRender

./: .gitignore  CMakeLists.txt  README.md  build.sh  camera.conf  cube.pl2  run.sh  transformation.txt
example/: ArRender.cpp
include/: Camera.h  Model3D.h  Renderer.h
src/: Camera.cpp  Model3D.cpp  Renderer.cpp
